# omega

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  WORKSPACE  ]  build.sh  configure.sh  copts.bzl
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
editor/: BUILD  Makefile  editor  editor.cpp  editor.h  editor_layer.cpp  editor_layer.h  editor_layer.hpp  main.cpp
editor/panels/: BUILD  resource_panel.cpp  resource_panel.h  resource_panel.hpp  scene_hierarchy.cpp  scene_hierarchy.h  scene_hierarchy.hpp
jam/: Makefile  README.md  main.cpp
jam/assets/: config.toml
lib/: CMakeLists.txt
lib/entt/: CMakeLists.txt
lib/glad/: BUILD  CMakeLists.txt  Makefile
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.cpp
lib/glm/: BUILD
lib/imgui/: CMakeLists.txt  Makefile  imgui_impl_sdl.cpp
lib/json/: CMakeLists.txt
lib/libtmx-parser/: CMakeLists.txt
lib/lua/src/: luac
lib/map/: BUILD  CMakeLists.txt  Makefile  tinyxml2.h  tmxparser.cpp  tmxparser.h
lib/stb/: BUILD  CMakeLists.txt  Makefile
lib/tomlplusplus/: CMakeLists.txt
libGL2D/core/: BUILD  animation.h  application.cc  application.cpp  application.h  ortho_camera.cc  ortho_camera.h  orthographic_camera.cc  orthographic_camera.cpp  orthographic_camera.h  using.cc  using.h  viewport.cc  viewport.cpp  viewport.h  window.cc  window.cpp  window.h
libGL2D/events/: BUILD  event.h  input_manager.cc  input_manager.h  input_processor.cc  input_processor.h  key_manager.cpp  key_manager.h  key_processor.cc  key_processor.h
libGL2D/gfx/: BUILD  errors.cc  errors.cpp  errors.h  font.cc  frame_buffer.cc  frame_buffer.cpp  frame_buffer.h  index_buffer.cc  index_buffer.cpp  index_buffer.h  shader.cc  shader.h  shape_renderer.cc  (+10 more)
src/: BUILD  main.cc
tools/: Makefile  texture_packer.cc
(+376 files in other folders)
