add_subdirectory(SDL)
add_subdirectory(SDL_image)
add_subdirectory(SDL_mixer)
add_subdirectory(box2d)
add_subdirectory(entt)
add_subdirectory(glad)
add_subdirectory(imgui)
add_subdirectory(implot)
add_subdirectory(json)
add_subdirectory(libtmx-parser)
add_subdirectory(stb)
add_subdirectory(tomlplusplus)

add_library(lib INTERFACE)
target_link_libraries(lib INTERFACE SDL3::SDL3)
target_link_libraries(lib INTERFACE SDL3_image::SDL3_image)
target_link_libraries(lib INTERFACE SDL3_mixer::SDL3_mixer)
target_link_libraries(lib INTERFACE entt)
target_link_libraries(lib INTERFACE box2d)
target_link_libraries(lib INTERFACE glad)
target_link_libraries(lib INTERFACE imgui)
target_link_libraries(lib INTERFACE implot)
target_link_libraries(lib INTERFACE json)
target_link_libraries(lib INTERFACE libtmx-parser)
target_link_libraries(lib INTERFACE stb)
target_link_libraries(lib INTERFACE tomlplusplus)

